fix: minor issues